--- a/src/components/filter-results/filter-results.scss
+++ b/src/components/filter-results/filter-results.scss
@@ -242,55 +242,407 @@ section.filter-result-body {
       justify-content: flex-start;
       align-items: center;
       width: auto;
+@media screen and (min-width: 1025px) {
+  section.filter-result-head {
+    margin-bottom: 4px;
+
+    div.result-head-container {
       gap: 8px;
+      padding: 12px;
     }
 
-    div.pokemon-types {
-      div.result-type-double {
-        width: 100px;
-      }
+    div.result-head-fixed-container {
+      grid-template-columns: 80px 308px;
+      grid-template-rows: 86px;
+      gap: 8px;
 
-      div.result-type-single {
-        width: 208px;
+      div.result-title {
+        gap: 8px;
+        width: 100%;
+
+        div.table-title {
+          padding: 8px;
+          border-radius: 4px;
+          font-size: 16px;
+
+          &:first-child {
+            height: 86px;
+          }
+        }
+
+        div.subtitle-group {
+          gap: 8px;
+
+          div.subtitle {
+            padding: 8px;
+            border-radius: 4px;
+            font-size: 16px;
+
+            &:first-child {
+              width: 80px;
+            }
+
+            &:nth-child(2) {
+              width: 128px;
+            }
+
+            &:last-child {
+              width: 84px;
+            }
+          }
+        }
       }
     }
 
-    div.pokemon-abilities {
-      div.result-ability-double {
-        width: 120px;
+    div.result-scrollable-container {
+      div.result-title {
+        gap: 8px;
+
+        div.table-title {
+          min-width: 90px;
+          width: auto;
+          padding: 8px;
+          border-radius: 4px;
+          font-size: 16px;
+        }
+
+        div.subtitle-group {
+          gap: 8px;
+
+          div.subtitle {
+            padding: 8px;
+            border-radius: 4px;
+            font-size: 16px;
+          }
+        }
       }
 
-      div.result-ability-single {
-        width: 248px;
+      div.pokemon-types {
+        div.subtitle {
+          min-width: 100px;
+          width: auto;
+        }
       }
 
-      div.result-ability-hidden {
-        width: 120px;
+      div.pokemon-abilities {
+        div.subtitle {
+          min-width: 120px;
+          width: auto;
+        }
       }
-    }
 
-    div.pokemon-stats {
-      div.result-stat {
-        width: 64px;
+      div.pokemon-stats {
+        div.subtitle {
+          min-width: 64px;
+          width: auto;
+        }
       }
-    }
 
-    div.pokemon-move {
-      min-width: 90px;
-      width: auto;
-
-      div.result-move-name {
-        min-width: 90px;
-        width: auto;
+      div.pokemon-moves {
+        div.subtitle {
+          min-width: 90px;
+          width: auto;
+        }
       }
     }
   }
+
+  section.filter-result-body {
+    margin-bottom: 20px;
+    height: calc(100vh - 94px - 148px - 114px - 20px);
+
+    div.result-body-container {
+      gap: 8px;
+      padding: 12px;
+    }
+
+    div.result {
+      width: 100%;
+      height: 39px;
+      border-radius: 4px;
+    }
+
+    div.result-body-scrollY-container {
+      div.result-identify {
+        gap: 8px;
+        grid-template-columns: 80px 80px 128px 84px;
+
+        div.result-pokemon-picture {
+          img {
+            width: 40px;
+            height: auto;
+          }
+        }
+      }
+    }
+
+    div.result-species {
+      position: relative;
+      display: flex;
+      gap: 8px;
+      padding-right: 12px;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      div.result-species-group {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: auto;
+        gap: 8px;
+      }
+
+      div.pokemon-types {
+        div.result-type-double {
+          width: 100px;
+        }
+
+        div.result-type-single {
+          width: 208px;
+        }
+      }
+
+      div.pokemon-abilities {
+        div.result-ability-double {
+          width: 120px;
+        }
+
+        div.result-ability-single {
+          width: 248px;
+        }
+
+        div.result-ability-hidden {
+          width: 120px;
+        }
+      }
+
+      div.pokemon-stats {
+        div.result-stat {
+          width: 64px;
+        }
+      }
+
+      div.pokemon-move {
+        min-width: 90px;
+        width: auto;
+
+        div.result-move-name {
+          min-width: 90px;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  .result-expand {
+    grid-template-columns: 420px calc(100% - 400px - 20px);
+  }
+
+  .result-collapse {
+    grid-template-columns: 420px calc(100% - 408px - 344px - 20px - 12px);
+  }
 }
 
-.result-expand {
-  grid-template-columns: 420px calc(100% - 400px - 20px);
-}
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  section.filter-result-head {
+    margin-bottom: 4px;
 
-.result-collapse {
-  grid-template-columns: 420px calc(100% - 408px - 344px - 20px - 12px);
+    div.result-head-container {
+      gap: 8px;
+      padding: 12px;
+    }
+
+    div.result-head-fixed-container {
+      grid-template-columns: 64px 284px;
+      grid-template-rows: 86px;
+      gap: 8px;
+
+      div.result-title {
+        gap: 8px;
+        width: 100%;
+
+        div.table-title {
+          padding: 8px;
+          border-radius: 4px;
+          font-size: 16px;
+
+          &:first-child {
+            height: 86px;
+          }
+        }
+
+        div.subtitle-group {
+          gap: 8px;
+
+          div.subtitle {
+            padding: 8px;
+            border-radius: 4px;
+            font-size: 16px;
+
+            &:first-child {
+              width: 64px;
+            }
+
+            &:nth-child(2) {
+              width: 120px;
+            }
+
+            &:last-child {
+              width: 84px;
+            }
+          }
+        }
+      }
+    }
+
+    div.result-scrollable-container {
+      div.result-title {
+        gap: 8px;
+
+        div.table-title {
+          min-width: 90px;
+          width: auto;
+          padding: 8px;
+          border-radius: 4px;
+          font-size: 16px;
+        }
+
+        div.subtitle-group {
+          gap: 8px;
+
+          div.subtitle {
+            padding: 8px;
+            border-radius: 4px;
+            font-size: 16px;
+          }
+        }
+      }
+
+      div.pokemon-types {
+        div.subtitle {
+          min-width: 100px;
+          width: auto;
+        }
+      }
+
+      div.pokemon-abilities {
+        div.subtitle {
+          min-width: 120px;
+          width: auto;
+        }
+      }
+
+      div.pokemon-stats {
+        div.subtitle {
+          min-width: 64px;
+          width: auto;
+        }
+      }
+
+      div.pokemon-moves {
+        div.subtitle {
+          min-width: 90px;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  section.filter-result-body {
+    margin-bottom: 20px;
+    height: calc(100vh - 94px - 148px - 114px - 20px);
+
+    div.result-body-container {
+      gap: 8px;
+      padding: 12px;
+    }
+
+    div.result {
+      width: 100%;
+      height: 39px;
+      border-radius: 4px;
+    }
+
+    div.result-body-scrollY-container {
+      div.result-identify {
+        gap: 8px;
+        grid-template-columns: 64px 64px 120px 84px;
+
+        div.result-pokemon-picture {
+          img {
+            width: 40px;
+            height: auto;
+          }
+        }
+      }
+    }
+
+    div.result-species {
+      position: relative;
+      display: flex;
+      gap: 8px;
+      padding-right: 12px;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      div.result-species-group {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: auto;
+        gap: 8px;
+      }
+
+      div.pokemon-types {
+        div.result-type-double {
+          width: 100px;
+        }
+
+        div.result-type-single {
+          width: 208px;
+        }
+      }
+
+      div.pokemon-abilities {
+        div.result-ability-double {
+          width: 120px;
+        }
+
+        div.result-ability-single {
+          width: 248px;
+        }
+
+        div.result-ability-hidden {
+          width: 120px;
+        }
+      }
+
+      div.pokemon-stats {
+        div.result-stat {
+          width: 64px;
+        }
+      }
+
+      div.pokemon-move {
+        min-width: 90px;
+        width: auto;
+
+        div.result-move-name {
+          min-width: 90px;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  .result-expand {
+    grid-template-columns: 380px calc(100% - 360px - 20px);
+  }
+
+  .result-collapse {
+    grid-template-columns: 380px calc(100% - 360px - 20px);
+  }
+  // TODO: here for .result-collapse and ensure that url('./src/component/filter-display/index.js') does not affect screen devices with a max-width of 1024px or less."
 }
