--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -1,15 +1,10 @@
 @use '../../utils/utils.scss';
 
 section.filter-menu {
-  position: absolute;
-  top: 0;
-  margin-top: 20px;
   transition: all 0.3s ease;
 
   div.filter-menu-wrapper {
     position: relative;
-    width: 344px;
-    height: calc(100vh - 40px);
     background: utils.$defaultGrey700;
     border-radius: 12px;
 
@@ -17,10 +12,10 @@ section.filter-menu {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 16px 32px;
 
       button {
-        padding: 4px 8px;
+        width: 32px;
+        height: 40px;
         border-radius: 6px;
 
         i {
@@ -47,8 +42,6 @@ section.filter-menu {
       width: 100%;
       bottom: 0;
       background: utils.$defaultWhite;
-      height: calc(100vh - 105px);
-      border-radius: 12px;
       overflow-y: scroll;
     }
   }
