feat: added filter-menu title color and side style bar

--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -121,6 +121,46 @@ div.filter-wrapper {
   }
 }
 
+div.types-filter {
+  &:after {
+    background: utils.$optionColorRed;
+  }
+
+  h4 {
+    color: utils.$optionColorRed;
+  }
+}
+
+div.abilities-filter {
+  &:after {
+    background: utils.$optionColorOrange;
+  }
+
+  h4 {
+    color: utils.$optionColorOrange;
+  }
+}
+
+div.stats-filter {
+  &:after {
+    background: utils.$optionColorGreen;
+  }
+
+  h4 {
+    color: utils.$optionColorGreen;
+  }
+}
+
+div.moves-filter {
+  &:after {
+    background: utils.$optionColorPurple;
+  }
+
+  h4 {
+    color: utils.$optionColorPurple;
+  }
+}
+
 .menu-invisible {
   right: -344px;
   opacity: 0;
