--- a/src/components/filter-results/filter-results.scss
+++ b/src/components/filter-results/filter-results.scss
@@ -10,7 +10,7 @@ div.result-scrollable-container {
     display: none;
   }
 }
-//TODO:padding-right:無法提供邊界，造成result-species會貼緊container的右側而不是result-head-scrollable-container
+// FIXME: padding-right: 無法提供邊界，造成 result-species 會貼緊 container 的右側而不是 result-head-scrollable-container
 
 section.filter-result-head {
   position: relative;
@@ -570,6 +570,218 @@ section.filter-result-body {
 
   .result-collapse {
     grid-template-columns: 380px calc(100% - 360px - 20px);
+  }
+  // TODO: here for .result-collapse and ensure that url('./src/component/filter-display/index.js') does not affect screen devices with a max-width of 1024px or less."
+}
+
+@media screen and (max-width: 767px) {
+  div.main-title {
+    margin: 18px;
+
+    h1 {
+      font-size: 24px;
+    }
+  }
+
+  section.filter-result-head {
+    margin-bottom: 4px;
+
+    div.result-head-container {
+      gap: 8px;
+      padding: 8px;
+    }
+
+    div.result-head-fixed-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+      gap: 8px;
+
+      div.result-title {
+        gap: 8px;
+        width: 100%;
+
+        div.table-title {
+          padding: 8px;
+          border-radius: 4px;
+          font-size: 14px;
+          height: 100%;
+        }
+
+        div.subtitle-group {
+          display: none;
+        }
+      }
+
+      div.serial-number {
+        display: none;
+      }
+    }
+
+    div.result-scrollable-container {
+      div.result-title {
+        gap: 6px;
+
+        div.table-title {
+          min-width: 90px;
+          width: auto;
+          padding: 4px;
+          border-radius: 4px;
+          font-size: 14px;
+        }
+
+        div.subtitle-group {
+          gap: 4px;
+
+          div.subtitle {
+            padding: 8px;
+            border-radius: 4px;
+            font-size: 12px;
+          }
+        }
+      }
+
+      div.pokemon-types {
+        div.subtitle {
+          min-width: 36px;
+          width: auto;
+        }
+      }
+
+      div.pokemon-abilities {
+        div.subtitle {
+          min-width: 76px;
+          width: auto;
+        }
+      }
+
+      div.pokemon-stats {
+        div.subtitle {
+          min-width: 48px;
+          width: auto;
+        }
+      }
+
+      div.pokemon-moves {
+        div.subtitle {
+          min-width: 90px;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  section.filter-result-body {
+    margin-bottom: 20px;
+    height: calc(100vh - 71px - 188px - 79.5px - 20px - 8px);
+
+    div.result-body-container {
+      gap: 8px;
+      padding: 8px;
+    }
+
+    div.result {
+      width: 100%;
+      height: 32px;
+      border-radius: 4px;
+
+      p {
+        font-size: 12px;
+      }
+    }
+
+    div.result-body-scrollY-container {
+      div.result-identify {
+        gap: 4px;
+        grid-template-columns: 40px 40px 76px 40px;
+
+        div.result-pokemon-picture {
+          img {
+            width: auto;
+            height: 36px;
+          }
+        }
+
+        div.result-regional-form {
+          p {
+            font-size: 8px;
+          }
+        }
+      }
+    }
+
+    div.result-species {
+      position: relative;
+      display: flex;
+      gap: 8px;
+      padding-right: 12px;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      div.result-species-group {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: auto;
+        gap: 4px;
+      }
+
+      div.pokemon-types {
+        p {
+          display: none;
+        }
+
+        img {
+          padding: 0;
+        }
+
+        div.result-type-double {
+          width: 43px;
+        }
+
+        div.result-type-single {
+          width: 90px;
+        }
+      }
+
+      div.pokemon-abilities {
+        div.result-ability-double {
+          width: 76px;
+        }
+
+        div.result-ability-single {
+          width: 156px;
+        }
+
+        div.result-ability-hidden {
+          width: 76px;
+        }
+      }
+
+      div.pokemon-stats {
+        div.result-stat {
+          width: 48px;
+        }
+      }
+
+      div.pokemon-move {
+        min-width: 90px;
+        width: auto;
+
+        div.result-move-name {
+          min-width: 90px;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  .result-expand {
+    grid-template-columns: 224px calc(100% - 204px - 20px);
+  }
+
+  .result-collapse {
+    grid-template-columns: 224px calc(100% - 204px - 20px);
   }
   // TODO: here for .result-collapse and ensure that url('./src/component/filter-display/index.js') does not affect screen devices with a max-width of 1024px or less."
 }
